--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ai": "2.2.2",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
+    "date-fns": "^3.6.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "lucide-react": "^0.252.0",
